# athena-old

./: .gitignore  LICENSE  README.md  requirements.txt  setup.cfg  tox.ini
docs/: account_guide.md  block_guide.md  blockchain_guide.md  network_guide.md  transaction_guide.md  wallet_guide.md
extra/: Untitled Diagram.drawio  sample_transaction.json  sample_transactions.json
gui/: main.js  package-lock.json
gui/src/pages/: index.js  myTransactions.js  myTransactions.module.scss  notifications.js  pendingResponses.js  sendAccusation.js  sendAppeal.js  sendVerdict.js  sendVerdict.module.scss
model/: Account.py  identity.py  network.py
model/transaction/: Accusation.py  Appeal.py  Contract.py  Transaction.py  Verdict.py
src/: Account.py  Block.py  Blockchain.py  Node.py  Node_Request.py  Node_Response.py  Request.py  Transaction.py  Wallet.py  app.py  config.py  identity.py  network.py  node.py  run_node.py  utils.py
src/transaction/: Accusation.py  Acusation.py  Appeal.py  Contract.py  Defense.py  Payment.py  Recon.py  Transaction.py  Verdict.py  Veredict.py
src/utils/: block_utils.py  transaction_utils.py
src/wallet/: Wallet.py
tests/: test_block.py  test_blockchain.py  test_id.py  test_transaction.py  test_transactions.py  test_wallet.py  tests.py
view/: index.html  package.json
view/src/contexts/: TransactionsContext.js
view/src/pages/: notifications.module.scss  pendingResponses.module.scss  sendAppeal.module.scss  sendContracts.js  sendContracts.module.scss  sendSignatures.js  settings.js  settings.module.scss
(+10 files in other folders)
