[metadata]
name = athenas
version = 0.0.1
license = MIT
description = A descantralized justice system that uses blockchain technology
long_description = file: README.md
author = Mateus
classifiers=
   Development Status :: 1 - Planning
   License :: MIT
   Natural Language :: Portuguese (Brazilian)
   Operating System :: Unix
   Programming Language :: Python :: 3

[options]
packages = find:
package_dir =
    =src
include_package_data = True
install_requires =
   <requirement 1>
   <requirement 2>
   <...>
   <requirement n>

[options.packages.find]
where=src